<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="347dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="Description of ImageView 4"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/mappa" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="642dp"
        android:layout_height="271dp"
        android:contentDescription="Description of ImageView 3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/compass" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:hint="Please Enter Age Here:"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/clickMeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/clickMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="42dp"
        android:text="Confirm"
        android:contentDescription="Click to confirm"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clickMeButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="417dp"
        android:layout_height="201dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="-350dp"
        android:contentDescription="Display text information"
        android:text="textview"
        android:textAlignment="center"
        android:textColor="#0B0303"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="376dp"
        android:layout_height="144dp"
        android:layout_marginStart="-400dp"
        android:layout_marginTop="-280dp"
        android:layout_marginEnd="-450dp"
        android:layout_marginBottom="-280dp"
        android:text="History"
        android:textAlignment="center"
        android:textColor="#0C0303"
        android:textSize="34sp"
        android:contentDescription="Display history information"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="-400dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="40dp"
        android:text="Clear"
        android:contentDescription="Click to clear"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>
